# Music-Manager

./: .gitignore  README.md
Code/: CMakeLists.txt  add_track_popup.h  add_track_popup.ui  albums_page.cpp  albums_page.h  artists_page.cpp  artists_page.h  artists_page.ui  core.cpp  core.h  database_manager.cpp  database_manager.h  file_manager.cpp  file_manager.h  main.cpp  main_window.cpp  main_window.h  metadata_manager.cpp  metadata_manager.h  metadata_tests.cpp  new_main_window.cpp  new_main_window.h  new_main_window.ui  settings_popup.cpp  settings_popup.h  settings_popup.ui  track_popup.cpp  track_popup.h  track_popup.ui  tracks_page.cpp  tracks_page.h  tracks_page.ui
Code/Core/: CMakeLists.txt  core.cpp  core.h  database_manager.cpp  database_manager.h  file_manager.cpp  file_manager.h  metadata_manager.cpp  metadata_manager.h
Code/Core/Data_Types/: album.h  date.cpp  date.h  duration.cpp  track.h
Code/Core/Database/: tables.sql
Code/Data_Types/: CMakeLists.txt  album.h  artist.h  date.cpp  date.h  duration.cpp  duration.h  print_structs.cpp  print_structs.h  track.h
Code/Database/: tables.sql
Code/GUI/: CMakeLists.txt  add_track_popup.cpp  add_track_popup.h  add_track_popup.ui  album_popup.ui  albums_page.cpp  albums_page.ui  artists_page.cpp  artists_page.h  gui_utils.cpp  gui_utils.h  main_window.h  main_window.ui  settings_popup.ui  track_popup.cpp  track_popup.h  track_popup.ui  tracks_page.cpp
Code/GUI/Albums/: add_album_popup.cpp  add_album_popup.h  add_album_popup.ui  album_popup.cpp  album_popup.h  album_popup.ui  album_widget.cpp  album_widget.h  album_widget.ui  albums_page.cpp  albums_page.h  albums_page.ui
Code/GUI/Artists/: artists_page.cpp  artists_page.h  artists_page.ui
Code/GUI/Main/: gui_utils.cpp  gui_utils.h  main_window.cpp  main_window.h  main_window.ui  settings_popup.cpp  settings_popup.h  settings_popup.ui
Code/GUI/Tracks/: add_track_popup.cpp  add_track_popup.h  add_track_popup.ui  track_popup.cpp  track_popup.h  track_popup.ui  tracks_page.cpp  tracks_page.h  tracks_page.ui
Code/Tests/: CMakeLists.txt  core_tests.cpp  database_tests.cpp  metadata_tests.cpp  print_structs.cpp  print_structs.h
Music_Files/: README.txt
